@@ -1,4 +1,4 @@
-/* $Id: messages.h,v 1.14 2011/09/10 08:26:03 imilh Exp $ */
+/* $Id: messages.h,v 1.15 2011/09/10 15:02:41 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010 The NetBSD Foundation, Inc.
@@ -91,6 +91,7 @@
 #define MSG_UPGRADE_PKG_INSTALL "about to upgrade %s, "
 #define MSG_ERR_INSTALLING_PKG "/!\\ there was an error while installing %s, please check %s\n"
 #define MSG_ERR_REMOVING_PKG "/!\\ there was an error while removing %s, please check %s\n"
+#define MSG_WARNS_ERRS "warnings: %d, errors: %d\n"
 
 /* depends.c */
 #define MSG_DIRECT_DEPS_FOR "direct dependencies for %s\n"
